# tactical-portfolio-tools

./: .bashrc  .gitignore  .pre-commit-config.yaml  .vimrc  Dockerfile  README.md  __main__.py  dev-requirements.in  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
beta_calculator/: __init__.py  __main__.py  beta_calculator.py
lib/: hello.py  hello_world.py
momentum_calculator/: __init__.py  __main__.py  momentum_calculator.py
python_starter/: hello_world.py
test/: test_hello.py
tests/: test_hello.py
trade_shaping_calculator/: __init__.py  __main__.py  trade_shaping_calculator.py
