[tool.poetry]
name = "python-starter"
version = "0.1.0"
description = "A starter kit for writing code and tests in python"
authors = ["Jonathan Mohrbacher"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
hypothesis = "^6.42"
pre-commit = "^2.18"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
