[tool.poetry]
name = "tactical-portfolio-tools"
version = "0.1.0"
description = "A collection of tools for tactical investing"
authors = ["Jonathan Mohrbacher"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
pre-commit = "^2.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
